--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^8.1",
         "nikic/php-parser": "^5.2"
     },
     "config": {
